logs/output_ferro5.txt
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:53: UserWarning: train_data has been renamed data
  warnings.warn("train_data has been renamed data")
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:58: UserWarning: test_data has been renamed data
  warnings.warn("test_data has been renamed data")
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:43: UserWarning: train_labels has been renamed targets
  warnings.warn("train_labels has been renamed targets")
/afs/crc.nd.edu/user/c/cschaef6/.local/lib/python3.7/site-packages/torchvision/datasets/mnist.py:48: UserWarning: test_labels has been renamed targets
  warnings.warn("test_labels has been renamed targets")
init done
{'quantization.global_wb': 5, 'inp_mult': 150, 'nb_hidden': 800, 'nb_steps': 150, 'batch_size': 128, 'quantization.global_lr': 0.0004, 'reg_size': 0.019640672506909564, 'mult_eq': 0.12, 'class_method': 'integrate'}
Epoch 1: loss=4.45210
Test accuracy: 0.659
Train accuracy: 0.389
Epoch 2: loss=1.95980
Test accuracy: 0.780
Train accuracy: 0.706
Epoch 3: loss=2.20039
Test accuracy: 0.809
Train accuracy: 0.770
Epoch 4: loss=2.67438
Test accuracy: 0.820
Train accuracy: 0.795
Epoch 5: loss=3.23556
Test accuracy: 0.834
Train accuracy: 0.810
Epoch 6: loss=3.86736
Test accuracy: 0.839
Train accuracy: 0.820
Epoch 7: loss=4.54933
Test accuracy: 0.842
Train accuracy: 0.825
Epoch 8: loss=5.26109
Test accuracy: 0.847
Train accuracy: 0.829
Epoch 9: loss=5.99436
Test accuracy: 0.844
Train accuracy: 0.831
Epoch 10: loss=6.34780
Test accuracy: 0.849
Train accuracy: 0.832
Epoch 11: loss=6.42185
Test accuracy: 0.848
Train accuracy: 0.833
Epoch 12: loss=6.50084
Test accuracy: 0.849
Train accuracy: 0.833
Epoch 13: loss=6.57760
Test accuracy: 0.850
Train accuracy: 0.834
Epoch 14: loss=6.65626
Test accuracy: 0.849
Train accuracy: 0.834
Epoch 15: loss=6.73403
Test accuracy: 0.849
Train accuracy: 0.834
Epoch 16: loss=6.81269
Test accuracy: 0.849
Train accuracy: 0.835
Epoch 17: loss=6.89063
Test accuracy: 0.850
Train accuracy: 0.835
Epoch 18: loss=6.96946
Test accuracy: 0.850
Train accuracy: 0.835
Epoch 19: loss=7.00581
Test accuracy: 0.850
Train accuracy: 0.835
Epoch 20: loss=7.01343
Test accuracy: 0.850
Train accuracy: 0.835
Epoch 21: loss=7.02115
Test accuracy: 0.850
Train accuracy: 0.835
Epoch 22: loss=7.02929
Test accuracy: 0.849
Train accuracy: 0.835
Epoch 23: loss=7.03689
Test accuracy: 0.850
Train accuracy: 0.835
Epoch 24: loss=7.04459
Test accuracy: 0.850
Train accuracy: 0.835
Epoch 25: loss=7.05259
Test accuracy: 0.850
Train accuracy: 0.835
Epoch 26: loss=7.06013
Test accuracy: 0.850
Train accuracy: 0.836
Epoch 27: loss=7.06807
Test accuracy: 0.850
Train accuracy: 0.835
Epoch 28: loss=7.07183
Test accuracy: 0.849
Train accuracy: 0.835
Epoch 29: loss=7.07261
Test accuracy: 0.850
Train accuracy: 0.836
Epoch 30: loss=7.07337
Test accuracy: 0.850
Train accuracy: 0.835
Epoch 31: loss=7.07425
Test accuracy: 0.849
Train accuracy: 0.835
Epoch 32: loss=7.07501
Test accuracy: 0.849
Train accuracy: 0.835
Epoch 33: loss=7.07599
Test accuracy: 0.849
Train accuracy: 0.835
Epoch 34: loss=7.07642
Test accuracy: 0.849
Train accuracy: 0.835
Epoch 35: loss=7.07742
Test accuracy: 0.849
Train accuracy: 0.835
{'quantization.global_wb': 5, 'inp_mult': 150, 'reg_size': 0.019640672506909564, 'weight_sum': 4.2}
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
python: can't open file 'spytorch_dvs2_ferro.py': [Errno 2] No such file or directory
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
  File "spytorch_dvs2_ferrro.py", line 59
    print("hello")print("hello")
                      ^
SyntaxError: invalid syntax
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
init done
{'quantization.global_wb': 5, 'inp_mult': 150, 'nb_hidden': 4000, 'nb_steps': 150, 'batch_size': 64, 'quantization.global_lr': 1.5e-05, 'reg_size': 0.001, 'mult_eq': 0.12, 'class_method': 'integrate'}
Epoch 1: loss=190.99371
Test accuracy: 0.242
Train accuracy: 0.179
Epoch 2: loss=190.22034
Test accuracy: 0.289
Train accuracy: 0.234
Epoch 3: loss=189.81877
Test accuracy: 0.309
Train accuracy: 0.254
Epoch 4: loss=189.27938
Test accuracy: 0.301
Train accuracy: 0.331
Epoch 5: loss=188.87132
Test accuracy: 0.328
Train accuracy: 0.359
Epoch 6: loss=188.42116
Test accuracy: 0.344
Train accuracy: 0.390
Epoch 7: loss=188.00397
Test accuracy: 0.371
Train accuracy: 0.411
Epoch 8: loss=187.59387
Test accuracy: 0.371
Train accuracy: 0.424
Epoch 9: loss=187.17395
Test accuracy: 0.402
Train accuracy: 0.457
Epoch 10: loss=186.92607
Test accuracy: 0.406
Train accuracy: 0.467
Epoch 11: loss=186.88808
Test accuracy: 0.398
Train accuracy: 0.464
Epoch 12: loss=186.84080
Test accuracy: 0.398
Train accuracy: 0.468
Epoch 13: loss=186.79724
Test accuracy: 0.410
Train accuracy: 0.475
Epoch 14: loss=186.75374
Test accuracy: 0.422
Train accuracy: 0.477
Epoch 15: loss=186.70851
Test accuracy: 0.430
Train accuracy: 0.479
Epoch 16: loss=186.66693
Test accuracy: 0.406
Train accuracy: 0.482
Epoch 17: loss=186.62216
Test accuracy: 0.395
Train accuracy: 0.484
Epoch 18: loss=186.57864
Test accuracy: 0.410
Train accuracy: 0.483
Epoch 19: loss=186.55388
Test accuracy: 0.391
Train accuracy: 0.484
Epoch 20: loss=186.54660
Test accuracy: 0.398
Train accuracy: 0.488
Epoch 21: loss=186.53873
Test accuracy: 0.406
Train accuracy: 0.489
Epoch 22: loss=186.54024
Test accuracy: 0.395
Train accuracy: 0.486
Epoch 23: loss=186.53180
Test accuracy: 0.391
Train accuracy: 0.488
Epoch 24: loss=186.52891
Test accuracy: 0.398
Train accuracy: 0.488
Epoch 25: loss=186.52367
Test accuracy: 0.406
Train accuracy: 0.486
Epoch 26: loss=186.51517
Test accuracy: 0.426
Train accuracy: 0.491
Epoch 27: loss=186.51430
Test accuracy: 0.402
Train accuracy: 0.491
Epoch 28: loss=186.51721
Test accuracy: 0.410
Train accuracy: 0.485
Epoch 29: loss=186.51310
Test accuracy: 0.398
Train accuracy: 0.490
Epoch 30: loss=186.51304
Test accuracy: 0.422
Train accuracy: 0.489
Epoch 31: loss=186.51296
Test accuracy: 0.418
Train accuracy: 0.486
Epoch 32: loss=186.50922
Test accuracy: 0.410
Train accuracy: 0.490
Epoch 33: loss=186.51325
Test accuracy: 0.395
Train accuracy: 0.488
Epoch 34: loss=186.51208
Test accuracy: 0.387
Train accuracy: 0.486
Epoch 35: loss=186.50998
Test accuracy: 0.395
Train accuracy: 0.490
{'quantization.global_wb': 5, 'inp_mult': 150, 'reg_size': 0.001, 'weight_sum': 1.12}
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
init done
{'quantization.global_wb': 5, 'inp_mult': 150, 'nb_hidden': 4000, 'nb_steps': 100, 'batch_size': 64, 'quantization.global_lr': 1.5e-05, 'reg_size': 0.00014014518367360887, 'mult_eq': 0.12, 'class_method': 'integrate'}
Epoch 1: loss=29.40542
Test accuracy: 0.129
Train accuracy: 0.089
Epoch 2: loss=29.23598
Test accuracy: 0.191
Train accuracy: 0.190
Epoch 3: loss=29.16589
Test accuracy: 0.254
Train accuracy: 0.236
Epoch 4: loss=29.06007
Test accuracy: 0.258
Train accuracy: 0.290
Epoch 5: loss=28.99201
Test accuracy: 0.273
Train accuracy: 0.319
Epoch 6: loss=28.91053
Test accuracy: 0.273
Train accuracy: 0.332
Epoch 7: loss=28.84399
Test accuracy: 0.289
Train accuracy: 0.341
Epoch 8: loss=28.77609
Test accuracy: 0.332
Train accuracy: 0.359
Epoch 9: loss=28.69611
Test accuracy: 0.312
Train accuracy: 0.382
Epoch 10: loss=28.65038
Test accuracy: 0.316
Train accuracy: 0.393
Epoch 11: loss=28.64474
Test accuracy: 0.328
Train accuracy: 0.390
Epoch 12: loss=28.63657
Test accuracy: 0.324
Train accuracy: 0.393
Epoch 13: loss=28.63071
Test accuracy: 0.316
Train accuracy: 0.396
Epoch 14: loss=28.62319
Test accuracy: 0.324
Train accuracy: 0.399
Epoch 15: loss=28.61645
Test accuracy: 0.312
Train accuracy: 0.398
Epoch 16: loss=28.60729
Test accuracy: 0.312
Train accuracy: 0.397
Epoch 17: loss=28.59831
Test accuracy: 0.309
Train accuracy: 0.403
Epoch 18: loss=28.59256
Test accuracy: 0.320
Train accuracy: 0.403
Epoch 19: loss=28.59131
Test accuracy: 0.312
Train accuracy: 0.400
Epoch 20: loss=28.59080
Test accuracy: 0.316
Train accuracy: 0.403
Epoch 21: loss=28.58428
Test accuracy: 0.320
Train accuracy: 0.406
Epoch 22: loss=28.58309
Test accuracy: 0.309
Train accuracy: 0.405
Epoch 23: loss=28.58704
Test accuracy: 0.312
Train accuracy: 0.405
Epoch 24: loss=28.58202
Test accuracy: 0.293
Train accuracy: 0.405
Epoch 25: loss=28.58365
Test accuracy: 0.305
Train accuracy: 0.405
Epoch 26: loss=28.58456
Test accuracy: 0.316
Train accuracy: 0.401
Epoch 27: loss=28.58271
Test accuracy: 0.297
Train accuracy: 0.405
Epoch 28: loss=28.58107
Test accuracy: 0.324
Train accuracy: 0.405
Epoch 29: loss=28.58353
Test accuracy: 0.332
Train accuracy: 0.400
Epoch 30: loss=28.58235
Test accuracy: 0.309
Train accuracy: 0.402
Epoch 31: loss=28.57809
Test accuracy: 0.301
Train accuracy: 0.405
Epoch 32: loss=28.58329
Test accuracy: 0.316
Train accuracy: 0.404
Epoch 33: loss=28.57834
Test accuracy: 0.316
Train accuracy: 0.404
Epoch 34: loss=28.57991
Test accuracy: 0.301
Train accuracy: 0.405
Epoch 35: loss=28.58168
Test accuracy: 0.328
Train accuracy: 0.403
{'quantization.global_wb': 5, 'inp_mult': 150, 'reg_size': 0.00014014518367360887, 'weight_sum': 0.15039723005481556}
Loading python/3.7.3
  Loading requirement: tcl/8.6.8 gcc/8.3.0
Traceback (most recent call last):
  File "spytorch_dvs2_ferrro.py", line 36, in <module>
    sum1v = args['s1']*1.12
TypeError: unsupported operand type(s) for *: 'NoneType' and 'float'
